--- a/src/main/resources/g54895/atl/project/stibride/view/primary.fxml
+++ b/src/main/resources/g54895/atl/project/stibride/view/primary.fxml
@@ -1,16 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g54895.atl.project.stibride.view.PrimaryController">
-   <children>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
-   </children>
+<VBox alignment="CENTER" prefHeight="544.0" prefWidth="569.0" spacing="20.0" style="-fx-background-color: rgb(148, 221, 255);" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g54895.atl.stibride.view.PrimaryController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
+   <children>
+      <ImageView fitHeight="81.0" fitWidth="481.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../../../Images/metro.gif" />
+         </image>
+      </ImageView>
+      <HBox alignment="CENTER" prefHeight="308.0" prefWidth="499.0" style="-fx-alignment: center; -fx-spacing: 30; -fx-padding: 10;">
+         <children>
+            <VBox prefHeight="282.0" prefWidth="206.0" style="-fx-spacing: 10; -fx-alignment: center;">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../../../Images/logo.png" />
+                     </image>
+                  </ImageView>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Origine:" />
+                  <ChoiceBox prefHeight="0.0" prefWidth="152.0" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination" />
+                  <ChoiceBox prefHeight="0.0" prefWidth="150.0" style="-fx-background-position: center;" />
+                  <Button alignment="CENTER" cache="true" contentDisplay="CENTER" lineSpacing="1.0" minHeight="21.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="90.0" text="Search" textAlignment="CENTER" />
+               </children>
+            </VBox>
+            <TextField alignment="TOP_LEFT" prefHeight="242.0" prefWidth="294.0" promptText="cxcxcx" />
+         </children>
+      </HBox>
+   </children>
 </VBox>
