--- a/src/main/resources/g54895/atl/stibride/view/primary.fxml
+++ b/src/main/resources/g54895/atl/stibride/view/primary.fxml
@@ -2,22 +2,23 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
+<?import org.controlsfx.control.SearchableComboBox?>
 
-<VBox alignment="CENTER" prefHeight="544.0" prefWidth="569.0" spacing="20.0" style="-fx-background-color: rgb(148, 221, 255);" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g54895.atl.stibride.view.PrimaryController">
+<VBox alignment="CENTER" prefHeight="544.0" prefWidth="569.0" spacing="20.0" style="-fx-background-color: rgb(148, 221, 255);" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g54895.atl.stibride.view.HomeController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
    <children>
       <ImageView fitHeight="81.0" fitWidth="481.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../Images/metro.gif" />
+            <Image url="@../../../../Images/metro.gif" />
          </image>
       </ImageView>
       <HBox alignment="CENTER" prefHeight="308.0" prefWidth="499.0" style="-fx-alignment: center; -fx-spacing: 30; -fx-padding: 10;">
@@ -26,17 +27,21 @@
                <children>
                   <ImageView fitHeight="150.0" fitWidth="77.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../Images/logo.png" />
+                        <Image url="@../../../../Images/logo.png" />
                      </image>
                   </ImageView>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Origine:" />
-                  <ChoiceBox prefHeight="0.0" prefWidth="152.0" />
+                  <SearchableComboBox fx:id="origin" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination" />
-                  <ChoiceBox prefHeight="0.0" prefWidth="150.0" style="-fx-background-position: center;" />
-                  <Button alignment="CENTER" cache="true" contentDisplay="CENTER" lineSpacing="1.0" minHeight="21.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="90.0" text="Search" textAlignment="CENTER" />
+                  <SearchableComboBox fx:id="destination" />
+                  <Button fx:id="searchButton" alignment="CENTER" cache="true" contentDisplay="CENTER" lineSpacing="1.0" minHeight="21.0" mnemonicParsing="false" onAction="#search" prefHeight="27.0" prefWidth="90.0" text="Search" textAlignment="CENTER" />
                </children>
             </VBox>
-            <TextField alignment="TOP_LEFT" prefHeight="242.0" prefWidth="294.0" promptText="cxcxcx" />
+            <TableView fx:id="resultResearch" prefHeight="200.0" prefWidth="200.0">
+              <columns>
+                <TableColumn id="stationCol" fx:id="stationCol" prefWidth="199.0" text="Stations" />
+              </columns>
+            </TableView>
          </children>
       </HBox>
    </children>
