--- a/src/main/resources/g54895/atl/stibride/view/primary.fxml
+++ b/src/main/resources/g54895/atl/stibride/view/primary.fxml
@@ -2,25 +2,34 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 <?import org.controlsfx.control.SearchableComboBox?>
 
-<VBox alignment="CENTER" prefHeight="544.0" prefWidth="569.0" spacing="20.0" style="-fx-background-color: rgb(148, 221, 255);" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g54895.atl.stibride.view.HomeController">
+<VBox alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="760.0" prefWidth="800.0" spacing="20.0" style="-fx-background-color: rgb(148, 221, 255);" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="g54895.atl.stibride.view.HomeController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
    <children>
-      <ImageView fitHeight="81.0" fitWidth="481.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../Images/metro.gif" />
-         </image>
-      </ImageView>
+      <ScrollPane fitToHeight="true" fitToWidth="true" hvalue="0.55" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="720.0">
+        <content>
+          <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="1600.0">
+               <children>
+                  <ImageView fitHeight="300.0" fitWidth="1600.0" layoutX="14.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="23.2403564453125" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="186.0" AnchorPane.topAnchor="7.0">
+                     <image>
+                        <Image url="@../../../../Images/metro.gif" />
+                     </image>
+                  </ImageView>
+               </children></AnchorPane>
+        </content>
+      </ScrollPane>
       <HBox alignment="CENTER" prefHeight="308.0" prefWidth="499.0" style="-fx-alignment: center; -fx-spacing: 30; -fx-padding: 10;">
          <children>
             <VBox prefHeight="282.0" prefWidth="206.0" style="-fx-spacing: 10; -fx-alignment: center;">
@@ -37,9 +46,9 @@
                   <Button fx:id="searchButton" alignment="CENTER" cache="true" contentDisplay="CENTER" lineSpacing="1.0" minHeight="21.0" mnemonicParsing="false" onAction="#search" prefHeight="27.0" prefWidth="90.0" text="Search" textAlignment="CENTER" />
                </children>
             </VBox>
-            <TableView fx:id="resultResearch" prefHeight="200.0" prefWidth="200.0">
+            <TableView fx:id="resultResearch" prefHeight="288.0" prefWidth="295.0">
               <columns>
-                <TableColumn id="stationCol" fx:id="stationCol" prefWidth="199.0" text="Stations" />
+                <TableColumn id="stationCol" fx:id="stationCol" prefWidth="294.0" text="Stations" />
               </columns>
             </TableView>
          </children>
