--- a/src/main/resources/g54895/atl/stibride/view/primary.fxml
+++ b/src/main/resources/g54895/atl/stibride/view/primary.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -30,7 +31,7 @@
                </children></AnchorPane>
         </content>
       </ScrollPane>
-      <HBox alignment="CENTER" prefHeight="308.0" prefWidth="499.0" style="-fx-alignment: center; -fx-spacing: 30; -fx-padding: 10;">
+      <HBox alignment="CENTER" prefHeight="393.0" prefWidth="760.0" style="-fx-alignment: center; -fx-spacing: 30; -fx-padding: 10;">
          <children>
             <VBox prefHeight="282.0" prefWidth="206.0" style="-fx-spacing: 10; -fx-alignment: center;">
                <children>
@@ -43,10 +44,27 @@
                   <SearchableComboBox fx:id="origin" />
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Destination" />
                   <SearchableComboBox fx:id="destination" />
-                  <Button fx:id="searchButton" alignment="CENTER" cache="true" contentDisplay="CENTER" lineSpacing="1.0" minHeight="21.0" mnemonicParsing="false" onAction="#search" prefHeight="27.0" prefWidth="90.0" text="Search" textAlignment="CENTER" />
+                  <HBox alignment="CENTER" prefHeight="38.0" prefWidth="208.0" spacing="5.0">
+                     <children>
+                        <Button fx:id="searchButton" alignment="CENTER" cache="true" contentDisplay="CENTER" lineSpacing="1.0" minHeight="21.0" mnemonicParsing="false" onAction="#search" prefHeight="28.0" prefWidth="90.0" text="Search" textAlignment="CENTER" />
+                        <Button fx:id="addButton" minHeight="20.0" mnemonicParsing="false" onAction="#addFavorite" prefHeight="28.0" prefWidth="89.0" text="Add Favorite" />
+                     </children>
+                  </HBox>
+                  <HBox prefHeight="38.0" prefWidth="206.0">
+                     <children>
+                        <ChoiceBox fx:id="favorite" prefWidth="150.0" />
+                        <Button fx:id="chooseButton" mnemonicParsing="false" onAction="#chooseFavorite" prefHeight="25.0" prefWidth="57.0" text="Choose" />
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="42.0" prefWidth="206.0" spacing="10.0">
+                     <children>
+                        <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateFavorite" prefHeight="30.0" prefWidth="90.0" text="Update" />
+                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteFavorite" prefHeight="30.0" prefWidth="90.0" text="Delete" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
-            <TableView fx:id="resultResearch" prefHeight="288.0" prefWidth="295.0">
+            <TableView fx:id="resultResearch" prefHeight="308.0" prefWidth="295.0">
               <columns>
                 <TableColumn id="stationCol" fx:id="stationCol" prefWidth="294.0" text="Stations" />
               </columns>
